Fix vertical align

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,9 @@
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
    background-image: url("../img/background_1.png");
    -webkit-background-size: cover;
    -moz-background-size: cover;
@@ -7,7 +12,6 @@ body {
 }
 
 .wrapper {
-    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -40,8 +44,8 @@ body {
 }
 
 .sei-logo img {
-    margin:40px;
-    max-width: 300px;
+    margin-top: 20px;
+    max-width: 200px;
 }
 
 .title-text {
